# kineflow

./: CMakeLists.txt  readme.md
docs/: Jonathan's Session 1 — Complete Notes.md  architecture.md  architecture_explained.md  jonathan_session2_notes.md  orbis_whitepaper.html  pipeline_grammar.md
docs/decisions/: todos.md
docs/design-decisions/: 0) core ideas.md  2) runtime_graph.md  2a) implement runtime_graph.md  3) runtimegraph again in detail.md  PLAN.md  UI.md  pin.hpp.md
docs/design-decisions/.obsidian/: workspace.json
examples/: calculator_pipelilne.json
src/core/: circular_buffer.hpp  data_point.hpp  time_series.hpp
src/kineflow/: console_sink.hpp  csv_sink.hpp  main.cpp  platform_model.hpp  telemetry_sample.hpp
src/legacy/: motion_command.hpp  motion_model.cpp  motion_model.hpp  simulated_vehicle.hpp  vehicle_state.hpp
src/model/: motion_command.hpp  motion_model.cpp  simulated_vehicle.hpp  vehicle_state.cpp  vehicle_state.hpp
src/pipeline/: dot_printer.hpp  dot_source.hpp  filter.hpp  filter_graph.hpp  hello_filter.hpp  json_filter.cpp  main.cpp  pin.hpp  pipeline_parser.cpp  pipeline_parser.hpp  runtime_graph.hpp  sample.hpp
src/sentinex/: console_sink.hpp  csv_sink.hpp  ground_vehicle_model.hpp  main.cpp  platform_model.hpp  telemetry_sample.hpp  telemetry_sink.hpp
src/simulation/vehicle_motion_model/: motion_model.hpp  simulated_vehicle.hpp
src/simulation/vehicle_simulation/: ground_vehicle_model.hpp  telemetry_sink.hpp
src/system_monitor/: metrics_collector.hpp  system_metrics.hpp
test/: test_motion_model.cpp  test_vehicle_state.cpp
